--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "Configuracao": {
-        "Conexao": "server=localhost; database=dbReceitas; uid=userReceitas; pwd=userReceitas; TrustServerCertificate=False; Encrypt=False",
+        "Conexao": "server=DESKTOP-5R6FFRV; database=dbReceitas; uid=userReceitas; pwd=userReceitas; TrustServerCertificate=False; Encrypt=False",
         "smtpIP": "127.0.0.1",
         "usesTLS": "1"
     }
